--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ViewModel/ComponentXMLUpload.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ViewModel/ComponentXMLUpload.razor
@@ -11,7 +11,7 @@
                 <EditForm Model="@Model">
                     <div>
                         <b>Here you can upload your products in bulk using XML.<br />
-                        The obligatory file structure:</b><br/><br />
+                        Here is the obligatory file structure:</b><br/><br />
                         • Extension: .xml<br />
                         • Encoding: UTF-8 <br /><br />
                         &lt;Products&gt;<br />
