--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/_Imports.razor
@@ -20,3 +20,4 @@
 @using ECommerce.CoreEntityBusiness;
 @using Microsoft.AspNetCore.Authorization
 @using System.Security.Claims
+@using System.Xml.Linq
