--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ComponentAddToChart.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ComponentAddToChart.razor
@@ -1,5 +1,4 @@
-﻿
-@inject IAccountsService AccountsService
+﻿@inject IAccountsService AccountsService
 @inject AuthenticationStateProvider AuthenticationStateProvider
 
 <div class="modal fade show" id="myModal" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog">
